--- a/templates/404.html
+++ b/templates/404.html
@@ -328,12 +328,12 @@
 <script>
     //based on https://dribbble.com/shots/3913847-404-page
 
-var pageX = $(document).width();
-var pageY = $(document).height();
+var pageX = document.width();
+var pageY = document.height();
 var mouseY=0;
 var mouseX=0;
 
-$(document).mousemove(function( event ) {
+document.mousemove(function( event ) {
   //verticalAxis
   mouseY = event.pageY;
   yAxis = (pageY/2-mouseY)/pageY*300;
